# stock-scraper

./: README.md  Risk-Ratios.xls  advisor-parser-new.py  advisor-parser-plus.py  advisor-parser-secure.py  advisor-parser.py  fund-stats_2023-11-19_13-03-55.csv  fund-stats_2023-11-19_20-09-51.csv  fundlist.yaml  funds_and_categories_with_mftools.json  fundslist.yaml  mftdownloader.py  mftreturnsconsolidator.py  output.csv  pyproject.toml  requirements.txt  response-dump.html  riskratiodownloader.py  scheme_list.json  screener-parser.py  screener-parser1.py  setup.sh  tickers.yaml
src/stock_scraper/: __init__.py  advisor_parser_new.py  advisor_parser_plus.py  login.py  mftdownloader.py  mftreturnsconsolidator.py
tests/: README.md
tests/fixtures/: benchmark-returns.xls  category-monitor.xls  consolidated-mft-returns.xls  risk-ratios.xls  trailing-returns.xls
tests/scripts/: test_advisor_parser_new.py  test_consolidation.py
