[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-scraper"
version = "0.1.0"
description = "Mutual fund data pipeline using MFT downloads, consolidation, and Groww enrichment."
requires-python = ">=3.11"
dependencies = [
  "requests>=2.31.0",
  "playwright>=1.40.0",
  "beautifulsoup4>=4.12.2",
  "openpyxl>=3.1.2",
  "xlrd>=2.0.1",
  "xlwt>=1.3.0",
  "PyYAML>=6.0.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
